[package]
name = "vector_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openai_api = {git = "https://github.com/JustBobinAround/openai_api.git"}
rayon = "1.8.0"
lopdf = {version = "0.30", default-features = false, features = ["nom_parser"]}
pdf-extract = { git = "https://github.com/JustBobinAround/pdf-extract-per-page.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
